--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,43 @@ body {
 .p-2 {
     padding: 8px;
 }
+
+.h-20 {
+    height: 20rem;
+}
+
+.w-20 {
+    width: 20rem;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.shadow-2xl {
+    box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+}
+
+.text-center {
+    text-align: center;
+}
+
+.box:hover {
+    animation-name: changeColor;
+    animation-duration: 4s;
+}
+
+@keyframes changeColor {
+    0% {
+        background-color: green;
+        transform: translate(100px, 100px);
+    }
+
+    50% {
+        background-color: red;
+    }
+
+    100% {
+        background-color: green;
+    }
+}
